@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.1.1.1 2003/12/11 14:01:54 hamajima Exp $
+# $NetBSD: Makefile,v 1.2 2003/12/31 14:29:18 hamajima Exp $
 #
 
-DISTNAME=	pwc-8.11
-PKGNAME=	phpsview-1.0
+DISTNAME=	pwc-8.12
+PKGNAME=	phpsview-1.02
 CATEGORIES=	graphics x11
 MASTER_SITES=	http://www.smcc.demon.nl/webcam/
 
 PATCH_SITES=	http://www2.starcat.ne.jp/~takam/bsd/
-PATCHFILES= 	pwc-8.11-bsd-1.patch.gz
+PATCHFILES= 	pwc-8.12-bsd-0.02.patch.gz
 PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	hamajima@NetBSD.org
@@ -18,13 +18,13 @@ USE_BUILDLINK2=		# defined
 
 do-build:
 	for f in phpsshot phpsview ; do				\
-		cd ${WRKSRC}/2.4.21 && ${SETENV} ${MAKE_ENV}	\
+		cd ${WRKSRC}/2.4.22 && ${SETENV} ${MAKE_ENV}	\
 		${MAKE_PROGRAM} -f ${MAKEFILE}.$$f ;		\
 	done
 
 do-install:
 	for f in phpsshot phpsview ; do				\
-		cd ${WRKSRC}/2.4.21 &&				\
+		cd ${WRKSRC}/2.4.22 &&				\
 		${INSTALL_PROGRAM} $$f ${PREFIX}/bin ;	\
 	done
 
